--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nuxt-ui-pro-template-docs",
+  "name": "@paxpar-tech/pp-widgets-demo",
   "private": true,
   "type": "module",
   "scripts": {
